# house-of-accusations

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  deploy.sh  lefthook.yml  package.json  release-please-config.json  sonar-project.properties
.github/codeql/: codeql-config.yml  suppressions.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  sonar.yml
api/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  ruff.toml
api/house_of_accusations/: config.py  db.py  main.py  models.py  sessions.py
api/tests/: test_evidence_index_migration.py  test_health.py  test_migration_integrity.py  test_sessions.py
docs/: PRD.md
docs/architecture/: data-model.md
scripts/: check_codeql_results.py
supabase/: AGENTS.md
supabase/migrations/: 20260308000001_create_accusations_schema.sql  20260308000002_create_evidence_index_view.sql  20260310000001_fix_rls_security.sql
web/: .lighthouserc.json  .prettierignore  Dockerfile  commitlint.config.js  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.ts  vitest.config.ts
web/src/: app.html
web/src/routes/: +page.svelte
web/tests/e2e/: smoke.spec.ts
web/tests/unit/: smoke.test.ts
