[project]
name = "house-of-accusations-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.49",
    "supabase>=2.13",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=house_of_accusations",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=lcov",
    "--cov-fail-under=85",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["house_of_accusations"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]
